--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/detail/style.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1230182_em29d8hpa3f.css">
     
     <title>商品详情</title>
@@ -28,7 +28,7 @@
     </header>
     <section>
         <div class="banner">
-            <img src="img/bg.jpg" alt="">
+            <img src="images/detail/bg.jpg" alt="">
             <div class="bg_text">
                 <h1>秋之樱日本料理</h1>
                 <span>单人自助料理</span>
@@ -128,7 +128,7 @@
             <div class="cus_content">
                 <div class="user">
                     <div class="user_pic">
-                        <img src="img/user.png" alt="" width="100%" height="100%">
+                        <img src="images/detail/user.png" alt="" width="100%" height="100%">
                     </div>
                     <div class="user_info">
                         <a>user</a>
@@ -140,12 +140,12 @@
                         这是南昌第一家无城日本料理店，给人一种高端大气上档次的感觉`在这家店用餐、好激动好Hi哟，味道很正宗，服务很贴心很热情，感觉来了不想走了，从来没有餐厅吃了还可以睡的，全部都是踏踏米，用餐愉快
                 </div>
                 <div class="feedback_pic">
-                    <img src="img/1.png" alt="">
-                    <img src="img/2.png" alt="">
-                    <img src="img/3.png" alt="">
-                    <img src="img/1.png" alt="">
-                    <img src="img/2.png" alt="">
-                    <img src="img/3.png" alt="">
+                    <img src="images/detail/1.png" alt="">
+                    <img src="images/detail/2.png" alt="">
+                    <img src="images/detail/3.png" alt="">
+                    <img src="images/detail/1.png" alt="">
+                    <img src="images/detail/2.png" alt="">
+                    <img src="images/detail/3.png" alt="">
                 </div>
                 <div class="name">
                    秋之樱日本料理（绿地缤纷城店)
@@ -160,7 +160,7 @@
                 <div class="cus_content">
                     <div class="user">
                         <div class="user_pic">
-                            <img src="img/user.png" alt="" width="100%" height="100%">
+                            <img src="images/detail/user.png" alt="" width="100%" height="100%">
                         </div>
                         <div class="user_info">
                             <a>admine</a>
@@ -172,9 +172,9 @@
                         在这家店用餐、好激动好Hi哟，味道很正宗，服务很贴心很热情，感觉来了不想走了，从来没有餐厅吃了还可以睡的，全部都是踏踏米，用餐愉快
                     </div>
                     <div class="feedback_pic">
-                        <img src="img/1.png" alt="">
-                        <img src="img/2.png" alt="">
-                        <img src="img/3.png" alt="">   
+                        <img src="images/detail/1.png" alt="">
+                        <img src="images/detail/2.png" alt="">
+                        <img src="images/detail/3.png" alt="">   
                     </div>
                     <div class="name">
                        秋之樱日本料理（绿地缤纷城店)
@@ -242,7 +242,7 @@
             <ul class="ad_list">
                 <li>
                     <div class="ad_pic">
-                        <img src="img/ad1.png" alt="" width="100%" height="100%">
+                        <img src="images/detail/ad1.png" alt="" width="100%" height="100%">
                     </div>
                     <div class="ad_info">
                         <div class="ai_top">
@@ -260,7 +260,7 @@
                 </li>
                 <li>
                     <div class="ad_pic">
-                        <img src="img/ad2.png" alt="" width="100%" height="100%">
+                        <img src="images/detail/ad2.png" alt="" width="100%" height="100%">
                     </div>
                     <div class="ad_info">
                         <div class="ai_top">
@@ -278,7 +278,7 @@
                 </li>
                 <li>
                     <div class="ad_pic">
-                        <img src="img/ad1.png" alt="" width="100%" height="100%">
+                        <img src="images/detail/ad1.png" alt="" width="100%" height="100%">
                     </div>
                     <div class="ad_info">
                         <div class="ai_top">
@@ -296,7 +296,7 @@
                 </li>
                 <li>
                     <div class="ad_pic">
-                        <img src="img/ad1.png" alt="" width="100%" height="100%">
+                        <img src="images/detail/ad1.png" alt="" width="100%" height="100%">
                     </div>
                     <div class="ad_info">
                         <div class="ai_top">
