--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no" />
 		<title>南昌美团网-南昌美食_酒店_旅游_团购_电影_吃喝玩乐</title>
-		<link rel="icon" type="image/x-icon" href="favicon.ico"/>
-		<link rel="stylesheet" type="text/css" href="css/base.css"/>
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
+		<link rel="stylesheet" type="text/css" href="css/index/base.css"/>
+		<link rel="stylesheet" type="text/css" href="css/index/index.css"/>
 		<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_1230006_glzwupk8w4r.css"/>
 	</head>
 	<body>
@@ -27,7 +27,7 @@
 			</header>
 			<!--背景图-->
 			<div class="banner">
-				<img src="img/download_banner.png"/>
+				<img src="images/index/download_banner.png"/>
 				<a href="#" class="open"></a>
 				<a href="#" class="down"></a>
 			</div>
@@ -125,7 +125,7 @@
 					<div class="desc clearfix">
 						<div class="recom_img">
 							<a href="#">
-								<img src="img/guess/33cb1b5c7edd537a0d5f0633bf07528235411.jpg@0_75_650_650a 267h_267w_2e_90Q.jpg"/>
+								<img src="images/index/guess/33cb1b5c7edd537a0d5f0633bf07528235411.jpg@0_75_650_650a 267h_267w_2e_90Q.jpg"/>
 							</a>
 						</div>
 						<div class="recom_info">
@@ -141,7 +141,7 @@
 					<div class="desc clearfix">
 						<div class="recom_img">
 							<a href="#">
-								<img src="img/guess/6a1406eb4b0a756b1cefa8cc5b106ed544012.jpg"/>
+								<img src="images/index/guess/6a1406eb4b0a756b1cefa8cc5b106ed544012.jpg"/>
 							</a>
 						</div>
 						<div class="recom_info">
@@ -157,7 +157,7 @@
 					<div class="desc clearfix">
 						<div class="recom_img">
 							<a href="#">
-								<img src="img/guess/__28969802__4306239.jpg"/>
+								<img src="images/index/guess/__28969802__4306239.jpg"/>
 							</a>
 						</div>
 						<div class="recom_info">
@@ -173,7 +173,7 @@
 					<div class="desc clearfix">
 						<div class="recom_img">
 							<a href="#">
-								<img src="img/guess/f76cc6268b7fdeffc5c5255dc2fcdd5d12105.jpg@73_0_293_293a 267h_267w_2e_100Q.jpg"/>
+								<img src="images/index/guess/f76cc6268b7fdeffc5c5255dc2fcdd5d12105.jpg@73_0_293_293a 267h_267w_2e_100Q.jpg"/>
 							</a>
 						</div>
 						<div class="recom_info">
