--- a/meishi.html
+++ b/meishi.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>美团美食</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="CSS/meishi.css">
+	<link rel="stylesheet" href="css/meishi/meishi.css">
 </head>
 <body>
 	<div class="head">
@@ -22,55 +22,55 @@
 		</a>
 	</div>
 	<div class="banner-download">
-		<img src="images/file.png">
+		<img src="images/meishi/file.png">
 	</div>
 	<div class="hot">
 		<ul class="hot-list clearfix">
 			<li>
 				<a href="#">
-					<img src="images/hg.png">
+					<img src="images/meishi/hg.png">
 					<p>火锅</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/tp.png">
+					<img src="images/meishi/tp.png">
 					<p>甜点饮品</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/zzc.png">
+					<img src="images/meishi/zzc.png">
 					<p>自助餐</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/kc.png">
+					<img src="images/meishi/kc.png">
 					<p>小吃快餐</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/xc.png">
+					<img src="images/meishi/xc.png">
 					<p>西餐</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/kr.png">
+					<img src="images/meishi/kr.png">
 					<p>烧烤烤肉</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/ky.png">
+					<img src="images/meishi/ky.png">
 					<p>香锅烤鱼</p>
 				</a>
 			</li>
 			<li>
 				<a href="#">
-					<img src="images/hx.png">
+					<img src="images/meishi/hx.png">
 					<p>海鲜</p>
 				</a>
 			</li>
@@ -93,7 +93,7 @@
 	<section>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -113,13 +113,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -139,13 +139,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -165,13 +165,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -191,13 +191,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -217,13 +217,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -243,13 +243,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -269,13 +269,13 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
 		<div class="list">
 			<a href="#">
-				<img src="images/hls.jpg">
+				<img src="images/meishi/hls.jpg">
 				<div class="info">
 					<div class="info_name">
 						华莱士
@@ -295,7 +295,7 @@
 				</div>
 			</a>
 			<div class="deal">
-				<img src="images/mini.png">
+				<img src="images/meishi/mini.png">
 				<span>6元超值套餐</span>
 			</div>
 		</div>
