--- a/moive.html
+++ b/moive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/moive.css">
+    <link rel="stylesheet" href="css/moive/moive.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1218218_sl8enqdfc1.css">
     <title>猫眼电影</title>
 </head>
@@ -22,18 +22,18 @@
             即将上映
         </div>
         <div class="reasch">
-           <img src="img/search.png" alt="" style="width: 1.3rem;height: 1.3rem;">
+           <img src="images/moive/search.png" alt="" style="width: 1.3rem;height: 1.3rem;">
         </div>
     </div>
 
     <div class="hot" id="hot">
     <div class="content">
         <div class="img">
-            <img src="img/x.jpg" alt="">
+            <img src="images/moive/x.jpg" alt="">
         </div>
         <div class="expection">
             <h3>X战警：黑凤凰</h3>
-            <img src="img/3d.png" alt="" style=" width: 2.5rem;">
+            <img src="images/moive/3d.png" alt="" style=" width: 2.5rem;">
             <p>观众评 <span>7.5</span></p>
             <p>主演：苏菲，詹姆斯，迈克尔</p>
             <p>今天60家影院放映1036场</p>
@@ -44,11 +44,11 @@
     </div>
     <div class="content">
         <div class="img">
-            <img src="img/zl.jpg" alt="">
+            <img src="images/moive/zl.jpg" alt="">
         </div>
         <div class="expection">
             <h3>追龙Ⅱ</h3>
-            <img src="img/2d.png" alt="" style=" width: 2.5rem;">
+            <img src="images/moive/2d.png" alt="" style=" width: 2.5rem;">
             <p>观众评 <span>7.5</span></p>
             <p>主演：梁家辉，古天乐，林家栋</p>
             <p>今天60家影院放映747场</p>
@@ -59,11 +59,11 @@
     </div>
     <div class="content">
         <div class="img">
-            <img src="img/gls.jpg" alt="">
+            <img src="images/moive/gls.jpg" alt="">
         </div>
         <div class="expection">
             <h3>哥拉斯2：怪兽之王</h3>
-            <img src="img/3d.png" alt="" style=" width: 2.5rem;">
+            <img src="images/moive/3d.png" alt="" style=" width: 2.5rem;">
             <p>观众评 <span>8.5</span></p>
             <p>主演：凯尔，维拉 法梅加，米莉</p>
             <p>今天60家影院放映289场</p>
@@ -74,7 +74,7 @@
     </div>
     <div class="content">
         <div class="img">
-            <img src="img/zhdwm.jpg" alt="">
+            <img src="images/moive/zhdwm.jpg" alt="">
         </div>
         <div class="expection">
             <h3>最好的我们</h3>
@@ -88,11 +88,11 @@
     </div>
     <div class="content">
         <div class="img">
-            <img src="img/wsbn.jpg" alt="">
+            <img src="images/moive/wsbn.jpg" alt="">
         </div>
         <div class="expection">
             <h3>无所不能</h3>
-            <img src="img/3d.png" alt="" style=" width: 2.5rem;">
+            <img src="images/moive/3d.png" alt="" style=" width: 2.5rem;">
             <p>观众评 <span>9.4</span></p>
             <p>主演：赫里尼克，亚米，罗尼特</p>
             <p>今天60家影院放映186场</p>
@@ -103,11 +103,11 @@
     </div>
     <div class="content">
         <div class="img">
-            <img src="img/x.jpg" alt="">
+            <img src="images/moive/x.jpg" alt="">
         </div>
         <div class="expection">
             <h3>当我们海阔天空</h3>
-            <img src="img/3d.png" alt="" style=" width: 2.5rem;">
+            <img src="images/moive/3d.png" alt="" style=" width: 2.5rem;">
             <p>暂无评分</p>
             <p>主演：刘秋实、刘奕畅，何琢言</p>
             <p>今天60家影院放映55场</p>
@@ -125,9 +125,9 @@
                     <ul>
                         <li>
                             <div class="ve">
-                                <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                             </div>
-                            <img src="img/nsdn.jpg" alt="">
+                            <img src="images/moive/nsdn.jpg" alt="">
                             <div style="    position: absolute;
                                                 width: 100%;">
                                 <span>321011人相看</span>
@@ -137,9 +137,9 @@
                         </li>
                         <li>
                             <div class="ve">
-                                <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                             </div>
-                            <img src="img/zzx.jpg" alt="">
+                            <img src="images/moive/zzx.jpg" alt="">
                             <div style="    position: absolute;
                                                    width: 100%;">
                                 <span>203148人相看</span>
@@ -149,9 +149,9 @@
                         </li>
                         <li>
                             <div class="ve">
-                                <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                             </div>
-                            <img src="img/hyr.jpg" alt="">
+                            <img src="images/moive/hyr.jpg" alt="">
                             <div style="    position: absolute;
                                                        width: 100%;">
                                 <span>147657人相看</span>
@@ -161,9 +161,9 @@
                         </li>
                         <li>
                             <div class="ve">
-                                <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                             </div>
-                            <img src="img/xyxx.jpg" alt="">
+                            <img src="images/moive/xyxx.jpg" alt="">
                             <div style="    position: absolute;
                                                            width: 100%;">
                                 <span>91534人相看</span>
@@ -173,9 +173,9 @@
                         </li>
                         <li>
                                 <div class="ve">
-                                    <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                    <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                                 </div>
-                                <img src="img/nsdn.jpg" alt="">
+                                <img src="images/moive/nsdn.jpg" alt="">
                                 <div style="    position: absolute;
                                                     width: 100%;">
                                     <span>321011人相看</span>
@@ -185,9 +185,9 @@
                             </li>
                             <li>
                                 <div class="ve">
-                                    <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                    <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                                 </div>
-                                <img src="img/zzx.jpg" alt="">
+                                <img src="images/moive/zzx.jpg" alt="">
                                 <div style="    position: absolute;
                                                        width: 100%;">
                                     <span>203148人相看</span>
@@ -197,9 +197,9 @@
                             </li>
                             <li>
                                 <div class="ve">
-                                    <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                    <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                                 </div>
-                                <img src="img/hyr.jpg" alt="">
+                                <img src="images/moive/hyr.jpg" alt="">
                                 <div style="    position: absolute;
                                                            width: 100%;">
                                     <span>147657人相看</span>
@@ -209,9 +209,9 @@
                             </li>
                             <li>
                                 <div class="ve">
-                                    <img src="img/love.png" alt="" style="    width: 0.7rem;">
+                                    <img src="images/moive/love.png" alt="" style="    width: 0.7rem;">
                                 </div>
-                                <img src="img/xyxx.jpg" alt="">
+                                <img src="images/moive/xyxx.jpg" alt="">
                                 <div style="    position: absolute;
                                                                width: 100%;">
                                     <span>91534人相看</span>
@@ -225,11 +225,11 @@
                         <div class="content">
                             <p style="    margin-top: 0;">6月13日 周四</p>
                                 <div class="img">
-                                    <img src="img/js.jpg" alt="">
+                                    <img src="images/moive/js.jpg" alt="">
                                 </div>
                                 <div class="expection">
                                     <h3>绝杀慕尼黑</h3>
-                                    <img src="img/2d.png" alt="" style=" width: 2.5rem;">
+                                    <img src="images/moive/2d.png" alt="" style=" width: 2.5rem;">
                                     <p> <span>16512</span>人想看</p>
                                     <p>主演：佛拉基米尔，约翰，安德烈</p>
                                     <p>2019-06-13上映</p>
@@ -241,11 +241,11 @@
                          <div class="content">
                              <p style="    margin-top: 0;">6月14日周五</p>
                                 <div class="img">
-                                    <img src="img/zl.jpg" alt="">
+                                    <img src="images/moive/zl.jpg" alt="">
                                 </div>
                                 <div class="expection">
                                     <h3>黑衣人：全球追击</h3>
-                                    <img src="img/3d.png" alt="" style=" width: 2.5rem;">
+                                    <img src="images/moive/3d.png" alt="" style=" width: 2.5rem;">
                                     <p> <span>148065</span>人想看</p>
                                     <p>主演：佛拉基米尔，约翰，安德烈</p>
                                     <p>2019-06-14上映</p>
@@ -256,7 +256,7 @@
                          </div>
                          <div class="content">
                                 <div class="img">
-                                    <img src="img/qm.jpg" alt="">
+                                    <img src="images/moive/qm.jpg" alt="">
                                 </div>
                                 <div class="expection">
                                     <h3>秦明 生死语者</h3>               
@@ -270,7 +270,7 @@
                          </div>
                          <div class="content">
                                 <div class="img">
-                                    <img src="img/zl.jpg" alt="">
+                                    <img src="images/moive/zl.jpg" alt="">
                                 </div>
                                 <div class="expection">
                                     <h3>追龙Ⅱ</h3>
@@ -289,6 +289,6 @@
         <div><i class="iconfont icon-yingyuana"></i>影院</div>
         <div><i class="iconfont icon-wode"></i>我的</div>
     </div>
-    <script src="js/moive.js"></script>
+    <script src="js/moive/moive.js"></script>
 </body>
 </html>
