--- a/meituan/xuanze.html
+++ b/meituan/xuanze.html
@@ -10,13 +10,13 @@
     <header class="navbar">
         <div class="nav-wrap-left">
             <a>
-                <img src="image/return.png">
+                <img src="image/return.png" alt="">
             </a>
         </div>
         <span class="nav-header">选择分类</span>
         <div class="nav-wrap-right">
             <a>
-                <img src="image/homepage.png"><br>
+                <img src="image/homepage.png" alt=""><br>
                 <span>首页</span>
             </a>
         </div>
@@ -999,12 +999,17 @@
     </section>
     <footer>
         <div class="footer-bar">
-            <a rel="" href=""></a>
-            <a rel="" href=""></a>
+            <a rel="" href="">登录</a>
+            <a rel="" href="">注册</a>
             <div class="bar-div">
-                <span></span>
-                <a rel="" href="">[</a>
+                <span>城市:</span>
+                <a rel="" href="">南昌</a>
             </div>
+        </div>
+        <div class="footer-nav">
+            <ul class="fnav-ul">
+                <li></li>
+            </ul>
         </div>
     </footer>
 </body>
