--- a/detail.html
+++ b/detail.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/detail/style.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1230182_em29d8hpa3f.css">
-    
+    <link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
     <title>商品详情</title>
 </head>
 <body>
