--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 			<!--顶部搜索-->
 			<header class="search clearfix">
 				<div class="search_box">
-					<a href="#" class="address">南昌</a>
+					<a href="choosecity.html" class="address">南昌</a>
 					<form action="#">
-						<input type="search" placeholder="输入商家/品类/商圈"/>
+						<a href="search.html">
+							<input type="search" placeholder="输入商家/品类/商圈"/>
+						</a>
 					</form>
-					<a href="#" class="mine">
+					<a href="login.html" class="mine">
 						<i class="iconfont icon-wode"></i>
 						<span>我的</span>
 					</a>
@@ -29,13 +31,13 @@
 			<div class="banner">
 				<img src="images/index/download_banner.png"/>
 				<a href="#" class="open"></a>
-				<a href="#" class="down"></a>
+				<a href="app.html" class="down"></a>
 			</div>
 			<!--导航栏-->
 			<div class="nav">
 				<ul class="clearfix">
 					<li>
-						<a href="#">
+						<a href="meishi.html">
 							<div class="nav-img img1">
 								<i class="iconfont icon-haofangtuo400iconfont2meishi"></i>
 							</div>
@@ -43,7 +45,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="moive.html">
 							<div class="nav-img img2">
 								<i class="iconfont icon-maomi-copy"></i>
 							</div>
@@ -124,7 +126,7 @@
 				<div class="recommend_bd">
 					<div class="desc clearfix">
 						<div class="recom_img">
-							<a href="#">
+							<a href="detail.html">
 								<img src="images/index/guess/33cb1b5c7edd537a0d5f0633bf07528235411.jpg@0_75_650_650a 267h_267w_2e_90Q.jpg"/>
 							</a>
 						</div>
