--- a/meishi.html
+++ b/meishi.html
@@ -5,6 +5,7 @@
 	<title>美团美食</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/meishi/meishi.css">
+	<link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
 </head>
 <body>
 	<div class="head">
