--- a/moive.html
+++ b/moive.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/moive/moive.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1218218_sl8enqdfc1.css">
+    <link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
     <title>猫眼电影</title>
 </head>
 <body>
