--- a/app.html
+++ b/app.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title></title>
+	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
+	<title>打开美团</title>
     <script type="text/javascript">
     	
    		document.addEventListener('plusready', function(){
