--- a/choosecity.html
+++ b/choosecity.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>美团网-美食_团购_外卖_酒店_旅游_电影票_吃喝玩乐全都有</title>
+    <link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
     <style>
         body{
             margin: 0;
