--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
-
+    <link rel="icon" type="image/x-icon" href="ico/favicon.ico"/>
     <style>
         h1,
         h2 {
