--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<!--版心-->
 		<!--<div class="container">-->
-			<!--顶部搜索-->
+			<!--顶部搜2索-->
 			<header class="search clearfix">
 				<div class="search_box">
 					<a href="choosecity.html" class="address">南昌</a>
