--- a/zhoubian/zhoubian.html
+++ b/zhoubian/zhoubian.html
@@ -8,6 +8,7 @@
     <script src="zhoubian.js"></script>
 </head>
 <body>
+<div class="z-maxcontain">
 <div class="z-head-contain">
     <a href="#" class="z-back"></a>
     <span class="z-head-text">周边游</span>
@@ -27,7 +28,9 @@
     </div>
 </div>
 
-<ul class="z-ul-nav">
+    <div class="zs-Mcontain">
+<div id="zs-contain">
+<ul id="z-ul-nav">
     <li class="z-li z-li-index" style="z-index: 4">
         <button class="z-li-text">周边游</button>
         <ul class="z-round">
@@ -126,7 +129,7 @@
     </li>
 </ul>
 
-<div class="z-scenery">
+<div id="z-scenery">
     <ul class="z-scenery-u">
         <li>
             <div class="zs-adress">
@@ -594,6 +597,9 @@
             </div>
         </li>
     </ul>
+</div>
+</div>
+    </div>
 </div>
 </body>
 </html>
