--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="zhoubian.html">
 							<div class="nav-img img7">
 								<i class="iconfont icon-dibudaohanglan-"></i>
 							</div>
