--- a/zhoubian.html
+++ b/zhoubian.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>周边游</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <link type="text/css" rel="stylesheet" href="zhoubian.css">
-    <script src="zhoubian.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/zhoubian/zhoubian.css">
+    <script src="js/zhoubian/zhoubian.js"></script>
 </head>
 <body>
 <div class="z-maxcontain">
