--- a/meituan/xuanze.html
+++ b/meituan/xuanze.html
@@ -1008,8 +1008,37 @@
         </div>
         <div class="footer-nav">
             <ul class="fnav-ul">
-                <li></li>
+                <li class="fnav-li">
+                    <a class="fnav-a" href="" rel="">首页</a>
+                </li>
+                <li class="fnav-li">
+                    <a class="fnav-a" href="" rel="">我的</a>
+                </li>
+                <li class="fnav-li">
+                    <a class="fnav-a" href="" rel="">美团下载</a>
+                </li>
+                <li class="fnav-li">
+                    <a class="fnav-a" href="" rel="">电脑版</a>
+                </li>
+                <li>
+                    <a class="fnav-li-a" href="" rel="">帮助</a>
+                </li>
             </ul>
+        </div>
+        <div class="footer-link">
+            <span>友情链接：</span>
+            <a rel="" href="">猫眼电影</a>
+            <a rel="" href="" class="footer-link-a">大众点评</a>
+            <a rel="" href="" class="footer-link-a">美团旅游</a>
+            <a rel="" href="" class="footer-link-a">榛果民宿</a>
+            <a rel="" href="" class="footer-link-a">大众点评下载</a>
+            <a rel="" href="" class="footer-link-a">美团收银官网</a>
+            <a rel="" href="" class="footer-link-a">美团点评餐饮学院</a>
+            <a rel="" href="" class="footer-link-a">快驴进货商家合作</a>
+        </div>
+        <div class="footer-foot">
+            <i></i>
+            <p>到底了</p>
         </div>
     </footer>
 </body>
