--- a/zhoubian.html
+++ b/zhoubian.html
@@ -18,11 +18,11 @@
     </a>
     <div class="z-nav-list">
         <div class="nav-hr">
-            <img src="image/z-index.png" alt="">
+            <img src="images/zhoubian/z-index.png" alt="">
             <a href="#" class="z-nav-text">首页</a>
         </div>
         <div class="nav-hr">
-            <img src="image/z-my.png" alt="">
+            <img src="images/zhoubian/z-my.png" alt="">
             <a href="#" class="z-nav-text">我的</a>
         </div>
     </div>
@@ -134,7 +134,7 @@
         <li>
             <div class="zs-adress">
 
-            <img class="z-img" src="image/zs-1.webp" alt="">
+            <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -165,7 +165,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-2.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-2.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -196,7 +196,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-3.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-3.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -227,7 +227,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-4.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-4.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -258,7 +258,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-1.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -289,7 +289,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-1.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -320,7 +320,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-2.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-2.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -351,7 +351,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-3.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-3.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -382,7 +382,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-4.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-4.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -413,7 +413,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-1.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -444,7 +444,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-1.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -475,7 +475,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-2.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-2.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -506,7 +506,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-3.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-3.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -537,7 +537,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-4.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-4.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
@@ -568,7 +568,7 @@
         <li>
             <div class="zs-adress">
 
-                <img class="z-img" src="image/zs-1.webp" alt="">
+                <img class="z-img" src="images/zhoubian/zs-1.webp" alt="">
 
                 <div class="zs-textcontain">
                     <div class="zs-adress-contain">
