--- a/xuanze.html
+++ b/xuanze.html
@@ -10,13 +10,13 @@
     <header class="navbar">
         <div class="nav-wrap-left">
             <a>
-                <img src="image/return.png" alt="">
+                <img src="images/xuanze/return.png" alt="">
             </a>
         </div>
         <span class="nav-header">选择分类</span>
         <div class="nav-wrap-right">
             <a>
-                <img src="image/homepage.png" alt=""><br>
+                <img src="images/xuanze/homepage.png" alt=""><br>
                 <span>首页</span>
             </a>
         </div>
