--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>美团网账号登录 - 手机美团官网</title>
-		<link rel="icon" type="image/x-icon" href="ico/avicon.ico"/>
-		<link rel="stylesheet" type="text/css" href="css/index/base.css"/>
-		<link rel="stylesheet" type="text/css" href="css/index/login.css"/>
+		<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+		<link rel="stylesheet" type="text/css" href="css/base.css"/>
+		<link rel="stylesheet" type="text/css" href="css/login.css"/>
 		<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_1230006_xd5mtmmoahp.css"/>
 	</head>
 	<body>
-		<!--顶部-3->
+		<!--顶部-->
 		<header>
 			<div class="headerTop clearfix">
 				<i class="iconfont icon-daohang-copy fl"></i>
@@ -70,6 +70,6 @@
 			<a href="#" class="nowreg fl">立即注册</a>
 			<a href="#" class="findpwd fr">找回密码</a>
 		</div>
-	<script type="text/javascript" src="js/index/login.js" ></script>
+	<script type="text/javascript" src="js/login.js" ></script>
 	</body>
 </html>
